# clinicaflow-medgemma

./: .dockerignore  .env.example  .gitignore  Dockerfile  KAGGLE_WRITEUP.md  LICENSE  README.md  champion_writeup_medgemma.md  docker-compose.yml  pyproject.toml  streamlit_app.py  冲刺计划.md
.github/workflows/: ci.yml  pages.yml
.streamlit/: config.toml
clinicaflow/: __init__.py  __main__.py  agents.py  audit.py  auth.py  cli.py  demo_server.py  diagnostics.py  evidence.py  fhir_export.py  logging_config.py  models.py  pipeline.py  policy_pack.py  privacy.py  quality.py  rules.py  settings.py  text.py  version.py
clinicaflow/benchmarks/: __init__.py  ablation.py  governance.py  review_packet.py  review_summary.py  synthetic.py  vignettes.py
docs/: ARCHITECTURE.md  BENCHMARK.md  CLINICIAN_REVIEW_TEMPLATE.md  DEPLOYMENT.md  EVIDENCE_APIS.md  JUDGES.md  MEDGEMMA_INTEGRATION.md  PRODUCT.md  SAFETY.md  VIDEO_SCRIPT.md  VIGNETTE_REGRESSION.md
examples/: case_report_thunderclap.json  routine_cold.json  sample_case.json  urgent_dyspnea.json  urgent_neuro.json
public_demo/: app.css  app.js  index.html
reviews/: README.md
scripts/: capture_medgemma_evidence.sh  cdp_streamlit_redeploy.js  demo_one_click.sh  prepare_submission_pack.sh  reproduce_writeup.sh  verify_release.sh
tests/: test_audit_bundle.py  test_auth.py  test_benchmark.py  test_demo_server.py  test_evidence.py  test_gradio_space.py  test_guardrails.py  test_hf_inference.py  test_json_extract.py  test_pipeline.py  test_policy_pack.py  test_privacy.py  test_validators.py  test_vignette_benchmark.py
(+23 files in other folders)
